--- a/samples/Firebase/Auth/AuthSample/AuthSample.Nuget.Legacy.csproj
+++ b/samples/Firebase/Auth/AuthSample/AuthSample.Nuget.Legacy.csproj
@@ -3,15 +3,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProjectGuid>{4102D288-4354-4093-995D-643D3324EDFF}</ProjectGuid>
+    <ProjectGuid>{E99EA959-3490-4350-8BB3-44B470E274E1}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
-    <RootNamespace>AdMobSample</RootNamespace>
-    <AssemblyName>AdMobSample</AssemblyName>
+    <RootNamespace>AuthSample</RootNamespace>
+    <AssemblyName>AuthSample</AssemblyName>
     <OutputPath>bin\$(Platform)\$(Configuration)-NuGet</OutputPath>
     <IntermediateOutputPath>obj\$(Platform)\$(Configuration)-NuGet</IntermediateOutputPath>
     <MSBuildProjectExtensionsPath>obj\$(MSBuildProjectName)\</MSBuildProjectExtensionsPath>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
@@ -48,7 +47,7 @@
     <MtouchFastDev>false</MtouchFastDev>
     <MtouchProfiling>true</MtouchProfiling>
     <MtouchLink>None</MtouchLink>
-    <MtouchArch>x86_64</MtouchArch>
+    <MtouchArch>i386, x86_64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <MtouchTlsProvider>Default</MtouchTlsProvider>
     <PlatformTarget>x86</PlatformTarget>
@@ -76,7 +75,7 @@
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchLink>None</MtouchLink>
-    <MtouchArch>x86_64</MtouchArch>
+    <MtouchArch>i386, x86_64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <MtouchTlsProvider>Default</MtouchTlsProvider>
     <PlatformTarget>x86</PlatformTarget>
@@ -87,9 +86,25 @@
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
     <Reference Include="MonoTouch.Dialog-1" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Facebook.CoreKit">
+      <HintPath>..\..\..\..\packages\Xamarin.Facebook.CoreKit.iOS.5.12.0\lib\xamarinios10\Facebook.CoreKit.dll</HintPath>
+    </Reference>
+    <Reference Include="Facebook.LoginKit">
+      <HintPath>..\..\..\..\packages\Xamarin.Facebook.LoginKit.iOS.5.12.0\lib\xamarinios10\Facebook.LoginKit.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Drawing.Common.dll" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\120.png">
@@ -134,6 +149,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="PasswordAuth\" />
+    <Folder Include="GoogleAuth\" />
+    <Folder Include="FacebookAuth\" />
+    <Folder Include="PhoneNumberAuth\" />
+    <Folder Include="Models\" />
+    <Folder Include="Models\Contexts\" />
     <Folder Include="Assets.xcassets\AppIcon.appiconset\" />
   </ItemGroup>
   <ItemGroup>
@@ -147,21 +168,44 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="AdsViewController.cs" />
-    <Compile Include="AdMobConstants.cs" />
+    <Compile Include="MenuViewController.cs" />
+    <Compile Include="UserViewController.cs" />
+    <Compile Include="PasswordAuth\PasswordLoginViewController.cs" />
+    <Compile Include="PasswordAuth\NewAccountViewController.cs" />
+    <Compile Include="GoogleAuth\SignInLoginViewController.cs" />
+    <Compile Include="GoogleAuth\SignInLoginViewController.designer.cs">
+      <DependentUpon>SignInLoginViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FacebookAuth\FacebookLoginViewController.cs" />
+    <Compile Include="FacebookAuth\FacebookLoginViewController.designer.cs">
+      <DependentUpon>FacebookLoginViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PhoneNumberAuth\PhoneNumberViewController.cs" />
+    <Compile Include="PhoneNumberAuth\CountriesViewController.cs" />
+    <Compile Include="Models\Contexts\NewAccountContext.cs" />
+    <Compile Include="Models\Contexts\PasswordContext.cs" />
+    <Compile Include="Models\CountriesManager.cs" />
+    <Compile Include="PhoneNumberAuth\VerificationCodeViewController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
     <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
+    <BundleResource Include="Resources\user.png" />
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')" />
+    <BundleResource Include="Resources\PhoneCodes.json" />
+    <BundleResource Include="Resources\CountryNames.json" />
+    <BundleResource Include="Resources\CountryFlags.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <PackageReference Include="Xamarin.Build.Download" Version="0.11.0" />
-    <PackageReference Include="Xamarin.Firebase.iOS.AdMob" Version="8.13.0" />
-    <PackageReference Include="Xamarin.Firebase.iOS.Core" Version="8.10.0" />
-    <PackageReference Include="Xamarin.Google.iOS.MobileAds" Version="8.13.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Xamarin.Facebook.CoreKit.iOS" Version="12.2.0.1" />
+    <PackageReference Include="Xamarin.Facebook.LoginKit.iOS" Version="12.2.0.1" />
+    <PackageReference Include="Xamarin.Firebase.iOS.Auth" Version="8.10.0.1" />
+    <PackageReference Include="Xamarin.Firebase.iOS.Core" Version="8.10.0.1" />
+    <PackageReference Include="Xamarin.Google.iOS.SignIn" Version="5.0.2.3" />
   </ItemGroup>
 </Project>
