--- a/samples/Google/Cast/CastSample/CastSample.Nuget.Legacy.csproj
+++ b/samples/Google/Cast/CastSample/CastSample.Nuget.Legacy.csproj
@@ -3,41 +3,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{49C747A7-E3C0-470A-9610-614087056956}</ProjectGuid>
+    <ProjectGuid>{7E996117-BEAC-49B3-ACCE-628527629455}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
-    <RootNamespace>GoogleMapsAdvSample</RootNamespace>
-    <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>GoogleMapsAdvSample</AssemblyName>
+    <RootNamespace>CastSample</RootNamespace>
+    <AssemblyName>CastSample</AssemblyName>
     <OutputPath>bin\$(Platform)\$(Configuration)-NuGet</OutputPath>
     <IntermediateOutputPath>obj\$(Platform)\$(Configuration)-NuGet</IntermediateOutputPath>
     <MSBuildProjectExtensionsPath>obj\$(MSBuildProjectName)\</MSBuildProjectExtensionsPath>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <BuildIpa>true</BuildIpa>
-    <ConsolePause>false</ConsolePause>
-    <CodesignProvision>Automatic:AdHoc</CodesignProvision>
-    <CodesignKey>iPhone Distribution</CodesignKey>
-    <MtouchLink>SdkOnly</MtouchLink>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-    <CodesignKey>iPhone Distribution</CodesignKey>
-    <CodesignProvision>Automatic:AppStore</CodesignProvision>
-    <MtouchLink>SdkOnly</MtouchLink>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
     <DebugSymbols>true</DebugSymbols>
@@ -111,15 +86,28 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
-    <Reference Include="MonoTouch.Dialog-1" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
-    <Folder Include="Samples\" />
-    <Folder Include="Samples\Map Demos\" />
-    <Folder Include="Samples\Overlay Demos\" />
-    <Folder Include="Samples\Camera Demos\" />
-    <Folder Include="Samples\Services Demos\" />
+    <Folder Include="POCO\" />
+    <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+  <ItemGroup>
+    <InterfaceDefinition Include="LaunchScreen.storyboard" />
+    <InterfaceDefinition Include="Main.storyboard" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -128,47 +116,29 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="DVCMenu.cs" />
-    <Compile Include="Samples\Map Demos\TrafficMapViewController.cs" />
-    <Compile Include="Samples\Map Demos\MyLocationViewController.cs" />
-    <Compile Include="Samples\Map Demos\MapTypesViewController.cs" />
-    <Compile Include="Samples\Map Demos\GestureControlViewController.cs" />
-    <Compile Include="Samples\Map Demos\BasicMapViewController.cs" />
-    <Compile Include="Samples\Overlay Demos\MarkersViewController.cs" />
-    <Compile Include="Samples\Overlay Demos\CustomMarkersViewController.cs" />
-    <Compile Include="Samples\Overlay Demos\MarkerEventsViewController.cs" />
-    <Compile Include="Samples\Overlay Demos\PolygonsViewController.cs" />
-    <Compile Include="Samples\Overlay Demos\PolylinesViewController.cs" />
-    <Compile Include="Samples\Overlay Demos\GroundOverlayViewController.cs" />
-    <Compile Include="Samples\Camera Demos\FitBoundsViewController.cs" />
-    <Compile Include="Samples\Camera Demos\CameraViewController.cs" />
-    <Compile Include="Samples\Camera Demos\MapLayerViewController.cs" />
-    <Compile Include="Samples\Services Demos\GeocoderViewController.cs" />
-    <Compile Include="Samples\Overlay Demos\TileLayerViewController.cs" />
+    <Compile Include="POCO\Track.cs" />
+    <Compile Include="POCO\Source.cs" />
+    <Compile Include="POCO\Video.cs" />
+    <Compile Include="Models\MediaListModel.cs" />
+    <Compile Include="POCO\Category.cs" />
+    <Compile Include="Controllers\TableViewController.cs" />
+    <Compile Include="Controllers\TableViewController.designer.cs">
+      <DependentUpon>TableViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MediaCell.cs" />
+    <Compile Include="Views\MediaCell.designer.cs">
+      <DependentUpon>MediaCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ImageFetcher.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Videos.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
-    <BundleResource Include="Resources\arrow.png" />
-    <BundleResource Include="Resources\arrow%402x.png" />
-    <BundleResource Include="Resources\australia_large.png" />
-    <BundleResource Include="Resources\australia_large%402x.png" />
-    <BundleResource Include="Resources\australia.png" />
-    <BundleResource Include="Resources\Default-568h%402x.png" />
-    <BundleResource Include="Resources\Default.png" />
-    <BundleResource Include="Resources\Default%402x.png" />
-    <BundleResource Include="Resources\glow-marker.png" />
-    <BundleResource Include="Resources\glow-marker%402x.png" />
-    <BundleResource Include="Resources\Icon-72.png" />
-    <BundleResource Include="Resources\Icon-72%402x.png" />
-    <BundleResource Include="Resources\Icon.png" />
-    <BundleResource Include="Resources\Icon%402x.png" />
-    <BundleResource Include="Resources\newark_nj_1922.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <InterfaceDefinition Include="LaunchScreen.storyboard" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Xamarin.Build.Download" Version="0.11.0" />
-    <PackageReference Include="Xamarin.Google.iOS.Maps" Version="6.0.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Xamarin.Firebase.iOS.Core" Version="8.10.0.1" />
+    <PackageReference Include="Xamarin.Google.iOS.Cast" Version="4.7.0.1" />
   </ItemGroup>
 </Project>
