--- a/samples/Google/TagManager/TagManagerSample/TagManagerSample.Nuget.Legacy.csproj
+++ b/samples/Google/TagManager/TagManagerSample/TagManagerSample.Nuget.Legacy.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProjectGuid>{73B8E300-75D2-4726-967D-1887107A93D7}</ProjectGuid>
+    <ProjectGuid>{22505EF4-4BCD-42A9-BA0F-DD7BCACEE150}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
-    <RootNamespace>StorageSample</RootNamespace>
-    <AssemblyName>StorageSample</AssemblyName>
+    <RootNamespace>TagManagerSample</RootNamespace>
+    <AssemblyName>TagManagerSample</AssemblyName>
     <OutputPath>bin\$(Platform)\$(Configuration)-NuGet</OutputPath>
     <IntermediateOutputPath>obj\$(Platform)\$(Configuration)-NuGet</IntermediateOutputPath>
     <MSBuildProjectExtensionsPath>obj\$(MSBuildProjectName)\</MSBuildProjectExtensionsPath>
@@ -86,6 +86,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="MonoTouch.Dialog-1" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\Contents.json">
@@ -133,10 +134,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Resources\container\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
-    <InterfaceDefinition Include="Main.storyboard" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -145,29 +146,11 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="NotesViewController.cs" />
-    <Compile Include="NotesViewController.designer.cs">
-      <DependentUpon>NotesViewController.cs</DependentUpon>
-    </Compile>
-    <Compile Include="NoteViewController.cs" />
-    <Compile Include="NoteViewController.designer.cs">
-      <DependentUpon>NoteViewController.cs</DependentUpon>
-    </Compile>
-    <Compile Include="NoteCell.cs" />
-    <Compile Include="NoteCell.designer.cs">
-      <DependentUpon>NoteCell.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Note.cs" />
-    <Compile Include="UIAlertHelper.cs" />
-    <Compile Include="PhotosViewController.cs" />
-    <Compile Include="PhotosViewController.designer.cs">
-      <DependentUpon>PhotosViewController.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PhotoCell.cs" />
-    <Compile Include="PhotoCell.designer.cs">
-      <DependentUpon>PhotoCell.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ImageInfo.cs" />
+    <Compile Include="ConstantViewController.cs" />
+    <Compile Include="LogEventViewController.cs" />
+    <Compile Include="MainViewController.cs" />
+    <Compile Include="UserPropertyContext.cs" />
+    <Compile Include="UserPropertyViewController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
@@ -175,13 +158,15 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')" />
+    <BundleResource Include="Resources\container\GTM-NB7LRB.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <PackageReference Include="Xamarin.Build.Download" Version="0.11.0" />
-    <PackageReference Include="Xamarin.Firebase.iOS.Auth" Version="8.10.0" />
-    <PackageReference Include="Xamarin.Firebase.iOS.Core" Version="8.10.0" />
-    <PackageReference Include="Xamarin.Firebase.iOS.Database" Version="8.10.0" />
-    <PackageReference Include="Xamarin.Firebase.iOS.Storage" Version="8.10.0" />
+    <PackageReference Include="Xamarin.Firebase.iOS.Analytics" Version="8.10.0.1" />
+    <PackageReference Include="Xamarin.Firebase.iOS.Core" Version="8.10.0.1" />
+    <PackageReference Include="Xamarin.Firebase.iOS.Installations" Version="8.10.0.1" />
+    <PackageReference Include="Xamarin.Google.iOS.Analytics" Version="3.20.0.1" />
+    <PackageReference Include="Xamarin.Google.iOS.TagManager" Version="7.4.0.1" />
   </ItemGroup>
 </Project>
